# wt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.rspi/add-goto-k3f9/: plan.md  research.md  spec.md
.rspi/fix-delete-missing-worktree-n7kq/: plan.md  research.md  spec.md
.rspi/skip-push-missing-remote-j4p2/: plan.md  research.md  spec.md
.rspi/stale-entries-state-sync-q7k2/: plan.md  research-1.md  research.md  spec.md
.rspi/wt-path-interactive-subst-x3k7/: plan.md  research.md  spec.md
.wt/: .gitignore  wt.json
src/wt/: __init__.py  cli.py  config.py  errors.py  gh.py  git.py  init.py  state.py  utils.py
tests/: conftest.py  test_auto_commit.py  test_cli_init_cmd.py  test_config.py  test_delete.py  test_git.py  test_init.py  test_list.py  test_merge.py  test_path.py  test_state.py  test_utils.py
